# Technical-task

./: .gitignore  CMakeLists.txt  README.md
include/: computerclub.h  parserdata.h
sample/: CMakeLists.txt  main.cpp
source/: computerclub.cpp
src/: computerclub.cpp  parserdata.cpp
testExample/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt
